<resources>
    <string name="app_name">MyLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定</string>
    <string name="action_add">新規追加</string>
    <string name="action_del">アイテム削除</string>
    <string name="more">もっと見る</string>
    <string name="action_search">アイテム検索</string>
    <string name="search_menu_search_text">Search</string>
    <string name="title_activity_cook_add">CookAddActivity</string>
    <string name="title_activity_book_list">BOOKリスト</string>
    <string name="title_activity_book_add">BookAddActivity</string>
    <string name="switchText">所有しているか？</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="title">書籍</string>
    <string name="titleKana">カナ</string>
    <string name="author">著者</string>
    <string name="authorKana">カナ</string>
    <string name="jgTitle1">状態</string>
    <string name="jgTitle2">貸出先</string>
    <string name="jgTitle3">読進</string>
    <string name="jgTitle4">最終更新</string>
    <string name="publisherName">出版社</string>
    <string name="book_edit">編集</string>
    <string name="book_line">Lineで知らせる</string>
    <string name="book_tweet">つぶやく</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barcodeTitle">ISBNとは？</string>
    <string name="barcodeText">書籍の裏表紙などに印刷されている番号、バーコードです。下のボタンを押し、カメラを起動して読み込んでください。</string>
    <string name="searchTitle">書籍検索</string>
    <string name="searchText">楽天ブックス書籍検索を利用して持ってる本を検索します。フォームに検索ワードを入れて検索してください。</string>
    <string name="formTitle">検索ワード</string>
    <string name="searchBtnText">書籍検索</string>
    <string name="formHint">16文字以内で入力</string>
    <string name="title_activity_camera_preview">ISBNリーダー</string>
    <string name="title_activity_book_add_complete">登録完了</string>
    <string name="title_activity_book_result_list">検索結果</string>
    <string name="title_activity_book_result_item">BookResultItemActivity</string>
    <string name="size">カテゴリ</string>
    <string name="categorySize">コミック</string>
    <string name="action_search_word">キーワード検索</string>
    <string name="action_search_category">カテゴリ検索</string>
    <string name="action_search_isbn">ISBN検索</string>
    <string name="title_activity_book_delete_list">BookDeleteListActivity</string>
    <string name="completeBtn">リストに戻る</string>
    <string name="price">価格</string>
    <string name="webPage">WEBページを見る</string>
    <string name="salesDate">発売日</string>
    <string name="itemPrice">価格</string>
    <string name="imageUpload">画像をアップロード</string>
    <string name="title_activity_info">インフォメーション</string>
    <string name="info_title">このアプリのポイント</string>
    <string name="info_subtitle1">アニメーション</string>
    <string name="info_text1">このアプリではファースト画面であるメニューにアニメーションを使っています。ヌルヌル感を楽しんでください。</string>
    <string name="info_subtitle2">グリッドビュー</string>
    <string name="info_text2">リストビューではなく、グリッドビューの理由はスマホの画面ではグリッドビューの方が押しやすいからです。それ以外にも写真も使いたかったのでグリッドビューを採用しました。</string>
    <string name="info_subtitle3">バーコード検索</string>
    <string name="info_text3">バーコードを読み込む際にオートフォーカス機能が重複し、頻繁に落ちてしまっていたので工夫し、なるべく負荷がかからないように作りました。</string>
    <string name="info_subtitle4">楽天APIによる検索</string>
    <string name="info_text4">楽天APIを使い、本の情報を持ってきて入力にかかる手間を少なくしました。前述のバーコード検索と相まって検索の手間が省けたと思います。</string>
    <string name="info_title2">反省点</string>
    <string name="info_subtitle5">時間不足</string>
    <string name="select_text">選択</string>
    <string name="info_text5">時間が足りなかった。規模の大きさと他の課題との両立が難しかったです。</string>
    <string name="info_subtitle6">アニメーション</string>
    <string name="info_text6">時間が掛かった割にアニメーションが思ったよりインパクト不足。企画の段階からのもう少しプラスアルファの機能について考えるべきだった。</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="shopping">買い物リストに入れる</string>
    <string name="title_activity_shopping_add">ShoppingAddActivity</string>
    <string name="shoppingTitle">買い物リスト</string>


</resources>
