<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.ac.hal.ths35033.mylibrary.BookDetailActivity">

    <item android:title="@string/action_settings"
        android:icon="@drawable/menudd"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/action_settings" android:title="@string/action_settings"
                android:icon="@drawable/gear"
                android:orderInCategory="100" app:showAsAction="never" />

            <item android:id="@+id/action_edit" android:title="@string/book_edit"
                android:icon="@drawable/monoedit"
                android:orderInCategory="100" app:showAsAction="never" />

            <item android:id="@+id/action_del" android:title="@string/action_del"
                android:icon="@drawable/monotrash"
                android:orderInCategory="100" app:showAsAction="never" />

            <item android:id="@+id/action_line" android:title="@string/book_line"
                android:icon="@drawable/line"
                android:orderInCategory="100" app:showAsAction="never" />

            <item android:id="@+id/action_tweet" android:title="@string/book_tweet"
                android:icon="@drawable/tweet"
                android:orderInCategory="100" app:showAsAction="never" />
        </menu>
    </item>
</menu>
