<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_marginTop="20dp"
    android:background="@color/color2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="タイトル"
        android:padding="10dp"
        android:id="@+id/BookTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/author"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="廣澤和成"
                android:layout_height="wrap_content"
                android:id="@+id/BookAuthor"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/publisherName"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="集英社"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/BookPublisher"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/size"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="単行本"
                android:layout_height="wrap_content"
                android:id="@+id/BookSize"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/price"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="¥2,000"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/BookPrice"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
